test deploymentPath